[gd_scene load_steps=4 format=2]

[ext_resource path="res://character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://character/enemy/EnemyCharacter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Enemy" instance=ExtResource( 1 )]

script = ExtResource( 2 )
speed = 80
detect_range = 150.0
attack_range = 70.0

[node name="Sprite" parent="." index="0"]

modulate = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="Collider" parent="." index="1"]

shape = SubResource( 1 )

[node name="DetectRange" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Area" type="CollisionShape2D" parent="DetectRange" index="0"]

[node name="AttackRange" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Area" type="CollisionShape2D" parent="AttackRange" index="0"]

[node name="RoamTimer" type="Timer" parent="." index="4"]

process_mode = 0
wait_time = 1.5
one_shot = false
autostart = true

[connection signal="body_entered" from="DetectRange" to="." method="_on_DetectRange_body_entered"]

[connection signal="body_exited" from="DetectRange" to="." method="_on_DetectRange_body_exited"]

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]

[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]

[connection signal="timeout" from="RoamTimer" to="." method="_on_RoamTimer_timeout"]


